--- a/go_static_web_page/static/index.html
+++ b/go_static_web_page/static/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Index</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/docker">Docker</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <h1 class="row justify-content-center">Hello, World! From Go!</h1>
 
         <div class="card">
