Alterado algumas informações

--- a/go_static_web_page/static/index.html
+++ b/go_static_web_page/static/index.html
@@ -28,15 +28,15 @@
 
         <div class="card">
             <div class="card-body">
-                <p>O módulo <mark>net/http</mark> é responsável por nos fornecer os métodos de mapeamento e gerenciamento de requisições e o pacote main será responsável por nos prover as funções para manter a aplicação de pé!</p>
+                <p>O módulo <mark>net/http</mark> é responsável por nos fornecer os métodos de mapeamento e gerenciamento de requisições e a função <mark>main</mark> será responsável a manter a aplicação de pé!</p>
             </div>
 
             <div class="card-body">
-                <p>A função <mark>main</mark>, como nos clássicos programas em C, será o ponto de partida da execução do programa.</p>
+                <p>A função <mark>main</mark>, como nos clássicos programas em <mark>C</mark>, será o ponto de partida da execução do programa.</p>
             </div>
 
             <div class="card-body">
-                <p>Dentro do <mark>main</mark>, utilizaremos as funções do pacote <mark>net/http</mark>.</p>
+                <p>Dentro do <mark>main</mark>, é utilizado as funções do pacote <mark>net/http</mark>.</p>
             </div>
 
             <div class="card-body">
@@ -48,15 +48,15 @@
             </div>
 
             <div class="card-body">
-                <p>Como será responsável por lidar com as requisições e respostas do servidor, a função handler deve receber dois parâmetros, um do tipo <mark>http.ResponseWriter</mark> e outro do tipo <mark>*http.Request</mark>.</p>
+                <p>Como será responsável por lidar com as requisições e respostas do servidor, a função <mark>handler</mark> deve receber dois parâmetros, um do tipo <mark>http.ResponseWriter</mark> e outro do tipo <mark>*http.Request</mark>.</p>
             </div>
 
             <div class="card-body">
-                <p>Para finalmente o servidor servir a página estática, a função <mark>http.ServeFile</mark> pode ser usada.</p>
+                <p>Para servir a página estática, a função <mark>http.ServeFile</mark> pode ser usada.</p>
             </div>
 
             <div class="card-body">
-                <p>O <mark>http.ServeFile</mark> é responsável por dispor um arquivo, ou seja, servir uma página web utilizando as variáveis responsáveis por escrever a resposta <mark>http</mark> e também o <mark>request</mark>.</p>
+                <p>O <mark>http.ServeFile</mark> é responsável por dispor um arquivo, ou seja, simplesmente servir uma página web utilizando as variáveis responsáveis por escrever a resposta <mark>http</mark> e também o request.</p>
             </div>
         </div>
     </div>
